remove undefined `Treestatus-updateTreeButton` css classes

--- a/landoui/templates/treestatus/trees.html
+++ b/landoui/templates/treestatus/trees.html
@@ -28,7 +28,7 @@
             {{ treestatus_select_trees_form.csrf_token }}
 
             <div>
-                <button class="Treestatus-updateTreeButton button is-primary" title="Update Tree">Update trees</button>
+                <button class="button is-primary" title="Update Tree">Update trees</button>
             </div>
             <table class="table">
                 <thead>
