--- a/landoui/templates/treestatus/update_trees.html
+++ b/landoui/templates/treestatus/update_trees.html
@@ -56,7 +56,7 @@
                 <p class="help">Optional</p>
             </div>
             <div class="field">
-                <button class="button" title="Update Tree">Update trees</button>
+                <button class="button is-primary" title="Update Tree">Update trees</button>
             </div>
         </div>
     </form>
