--- a/landoui/templates/treestatus/update_trees.html
+++ b/landoui/templates/treestatus/update_trees.html
@@ -17,7 +17,7 @@
     <form action="{{ url_for("treestatus.update_treestatus") }}" method="post">
         <div class="box">
             {{ treestatus_update_trees_form.csrf_token }}
-            <div class="container">
+            <div class="block">
                 <div>You are about to update the following trees:</div>
                 <ul>
                     {% for tree in treestatus_update_trees_form.trees %}
