make delete button an actual X

--- a/landoui/templates/treestatus/log.html
+++ b/landoui/templates/treestatus/log.html
@@ -48,7 +48,7 @@
                             <td>
                                 <button class="button is-small is-primary log-update-edit log-update-visible" type="button" data-target="{{ form_class }}">Edit</button>
                                 <button class="button is-small is-primary log-update-hidden">Update</button>
-                                <button class="button is-small log-update-edit log-update-hidden" type="button"></button>
+                                <button class="button delete is-normal log-update-edit log-update-hidden" type="button"></button>
                             </td>
                         </form>
                     </tr>
