--- a/landoui/templates/treestatus/new_tree.html
+++ b/landoui/templates/treestatus/new_tree.html
@@ -15,14 +15,16 @@
     <h1>Treestatus: New tree</h1>
     <form action="{{ url_for("treestatus.new_tree_handler") }}" method="post">
         {{ treestatus_new_tree_form.csrf_token }}
-        <div class="field">
-            <label class="label">{{ treestatus_new_tree_form.tree.label }}</label>
-            <div class="control is-expanded">
-                {{ treestatus_new_tree_form.tree(placeholder="New tree name") }}
+        <div class="box">
+            <div class="field">
+                <label class="label">{{ treestatus_new_tree_form.tree.label }}</label>
+                <div class="control is-expanded">
+                    {{ treestatus_new_tree_form.tree(class="input", placeholder="New tree name") }}
+                </div>
+                <p class="help">The status will be "open" by default".</p>
             </div>
-            <p class="help">The status will be "open" by default".</p>
+            <button class="button is-primary">Add tree</button>
         </div>
-        <button class="button">Add tree</button>
     </form>
 </main>
 {% endblock %}
