--- a/landoui/templates/treestatus/new_tree.html
+++ b/landoui/templates/treestatus/new_tree.html
@@ -21,7 +21,7 @@
                 <div class="control is-expanded">
                     {{ treestatus_new_tree_form.tree(class="input", placeholder="New tree name") }}
                 </div>
-                <p class="help">The status will be "open" by default".</p>
+                <p class="help">The status will be "open" by default.</p>
             </div>
             <button class="button is-primary">Add tree</button>
         </div>
