put trees display in a box

--- a/landoui/templates/treestatus/trees.html
+++ b/landoui/templates/treestatus/trees.html
@@ -14,7 +14,7 @@
 
     {% include "treestatus/recent_changes.html" %}
 
-    <div>
+    <div class="box">
         {#
             The main Treestatus page is a table that presents the trees.
             Trees can be selected here for updating, or for deletion.
