close h2 on trees

--- a/landoui/templates/treestatus/trees.html
+++ b/landoui/templates/treestatus/trees.html
@@ -19,7 +19,7 @@
             The main Treestatus page is a table that presents the trees.
             Trees can be selected here for updating, or for deletion.
         #}
-        <h2>Trees<h2>
+        <h2>Trees</h2>
         <form action="{{ url_for("treestatus.update_treestatus_form") }}" method="post">
             {{ treestatus_select_trees_form.csrf_token }}
 
