--- a/landoui/templates/treestatus/log.html
+++ b/landoui/templates/treestatus/log.html
@@ -17,47 +17,33 @@
     <p>Current status: {{ tree }} is <span class="{{ current_status | treestatus_to_status_badge_class }}">{{ current_status }}</span></p>
 
     <a href="{{ url_for("treestatus.treestatus") }}"><button class="button">Show All Trees</button></a>
-    <div>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Status</th>
-                    <th>Reason</th>
-                    <th>Reason Category</th>
-                    <th>When</th>
-                    <th>Who</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for log_update_form, log in logs %}
-                    <!-- TODO put this class on the right field after converting from row -->
-                    <form action="{{ url_for("treestatus.update_log", id=log.id) }}" method="post">
-                        {{ log_update_form.csrf_token }}
-                        <tr class="log-update-form">
-                            <td>{{ log.id }}</td>
-                            <td><span class="{{ log.status | treestatus_to_status_badge_class }}">{{ log.status }}</span></td>
-                            <td>
-                                <p class="log-update-visible">{{ log.reason }}</p>
-                                {{ log_update_form.reason(id=id_string, class="log-update-hidden") }}
-                            </td>
-                            <td>
-                                <p class="log-update-visible">{{ log_update_form.reason_category.data }}</p>
-                                {{ log_update_form.reason_category(id=id_string, class="log-update-hidden") }}
-                            </td>
-                            <td>{{ log.when }}</td>
-                            <td>{{ log.who }}</td>
-                            <td>
-                                <button class="button is-small is-primary log-update-edit log-update-visible" type="button" data-target="{{ form_class }}">Edit</button>
-                                <button class="button is-small is-primary log-update-hidden">Update</button>
-                                <button class="button delete is-normal log-update-edit log-update-hidden" type="button"></button>
-                            </td>
-                        </tr>
-                    </form>
-                {% endfor %}
-            </tbody>
-        </table>
+    <div class="container">
+        {% for log_update_form, log in logs %}
+            <!-- TODO put this class on the right field after converting from row -->
+            <form action="{{ url_for("treestatus.update_log", id=log.id) }}" method="post">
+                {{ log_update_form.csrf_token }}
+
+                <div class="box log-update-form">
+                    <div class="columns">
+                        <div class="column"><span class="{{ log.status | treestatus_to_status_badge_class }}">{{ log.status }}</span></div>
+                        <div class="column">{{ log.who }} changed the status at {{ log.when }}.</div>
+                        <div class="column">
+                            <p class="log-update-visible">{{ log.reason }}</p>
+                            {{ log_update_form.reason(id=id_string, class="log-update-hidden") }}
+                        </div>
+                        <div class="column">
+                            <p class="log-update-visible">{{ log_update_form.reason_category.data }}</p>
+                            {{ log_update_form.reason_category(id=id_string, class="log-update-hidden") }}
+                        </div>
+                        <div class="column">
+                            <button class="button is-small is-primary log-update-edit log-update-visible" type="button" data-target="{{ form_class }}">Edit</button>
+                            <button class="button is-small is-primary log-update-hidden">Update</button>
+                            <button class="button delete is-normal log-update-edit log-update-hidden" type="button"></button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        {% endfor %}
     </div>
 </main>
 {% endblock %}
