use labels from WTForms instead of hard-coding

--- a/landoui/templates/treestatus/recent_changes.html
+++ b/landoui/templates/treestatus/recent_changes.html
@@ -31,8 +31,8 @@
                         </ul>
                     </div>
                     <div class="recent-changes-update-visible">
-                        <p>Reason: <b>{{ status_change_form.reason.data }}</b></p>
-                        <p>Reason category: <b>{{ status_change_form.reason_category.data }}</b></p>
+                        <p>{{ status_change_form.reason.label }}: <b>{{ status_change_form.reason.data }}</b></p>
+                        <p>{{ status_change_form.reason_category.label }}: <b>{{ status_change_form.reason_category.data }}</b></p>
                     </div>
                     <div class="recent-changes-update-hidden">
                         <div class="field">
