fix issue with lack of logs for new tree

--- a/landoui/templates/treestatus/log.html
+++ b/landoui/templates/treestatus/log.html
@@ -12,8 +12,7 @@
     {% include "treestatus/recent_changes.html" %}
 
     <h1>Treestatus: {{ tree }}</h1>
-    <!-- TODO this fails when tree is brand new -->
-    {% set current_status = logs[0].status %}
+    {% set current_status = logs[0].status if logs else "open" %}
     <p>Current status: {{ tree }} is <span class="{{ current_status | treestatus_to_status_badge_class }}">{{ current_status }}</span></p>
 
     <a href="{{ url_for("treestatus.treestatus") }}"><button class="button">Show All Trees</button></a>
