remove data-target from button

--- a/landoui/templates/treestatus/log.html
+++ b/landoui/templates/treestatus/log.html
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                         <div class="column is-narrow">
-                            <button class="button is-small is-primary log-update-edit log-update-visible" type="button" data-target="{{ form_class }}">Edit</button>
+                            <button class="button is-small is-primary log-update-edit log-update-visible" type="button">Edit</button>
                             <button class="button is-small is-primary log-update-hidden">Update</button>
                             <button class="button delete is-normal log-update-edit log-update-hidden" type="button"></button>
                         </div>
