--- a/landoui/templates/treestatus/log.html
+++ b/landoui/templates/treestatus/log.html
@@ -20,8 +20,7 @@
     </div>
     <div class="container">
         {% for log_update_form, log in logs %}
-            <!-- TODO put this class on the right field after converting from row -->
-            <!-- TODO still looks a tad funky with spacing etc -->
+            <!-- TODO can we display these as a graph similar to existing view? worth doing? -->
             <form action="{{ url_for("treestatus.update_log", id=log.id) }}" method="post">
                 {{ log_update_form.csrf_token }}
 
@@ -32,18 +31,32 @@
                         </div>
                         <div class="column is-expanded">
                             <div class="block"><b>{{ log.when }}</b></div>
-                            <div class="block">{{ log.who }}</div>
+                            <div class="block"><h2 class="subtitle">{{ log.who }}</h2></div>
                             <div class="block">
-                                <p class="log-update-visible">{{ log_update_form.reason.label }}: <b>{{ log.reason }}</b></p>
-                                {{ log_update_form.reason(id=id_string, class="log-update-hidden") }}
-                                <p class="log-update-visible">{{ log_update_form.reason_category.label }}: <b>{{ log_update_form.reason_category.data }}</b></p>
-                                {{ log_update_form.reason_category(id=id_string, class="log-update-hidden") }}
+                                <div class="log-update-visible">
+                                    <p class="log-update-visible">{{ log_update_form.reason.label }}: <b>{{ log.reason }}</b></p>
+                                    <p class="log-update-visible">{{ log_update_form.reason_category.label }}: <b>{{ log_update_form.reason_category.data }}</b></p>
+                                </div>
+                                <div class="log-update-hidden">
+                                    <div class="field">
+                                        <label class="label">{{ log_update_form.reason.label }}</label>
+                                        {{ log_update_form.reason(id=id_string, class="input") }}
+                                    </div>
+                                    <div class="field">
+                                        <label class="label">{{ log_update_form.reason_category.label }}</label>
+                                        {{ log_update_form.reason_category(id=id_string, class="select") }}
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="column is-narrow">
-                            <button class="button is-small is-primary log-update-edit log-update-visible" type="button">Edit</button>
-                            <button class="button is-small is-primary log-update-hidden">Update</button>
-                            <button class="button delete is-normal log-update-edit log-update-hidden" type="button"></button>
+                            <div class="log-update-visible">
+                                <button class="button is-small is-primary log-update-edit" type="button">Edit</button>
+                            </div>
+                            <div class="log-update-hidden">
+                                <button class="button delete is-normal log-update-edit" type="button"></button>
+                                <button class="button is-small is-primary">Update</button>
+                            </div>
                         </div>
                     </div>
                 </div>
