--- a/landoui/templates/treestatus/new_tree.html
+++ b/landoui/templates/treestatus/new_tree.html
@@ -12,7 +12,7 @@
     {% include "treestatus/recent_changes.html" %}
 
     <h1>Treestatus: New tree</h1>
-    <form action="{{ url_for("treestatus.new_tree_handler") }}" method="post">
+    <form action="{{ url_for("treestatus.new_tree") }}" method="post">
         {{ treestatus_new_tree_form.csrf_token }}
         <div class="box">
             <div class="field">
