--- a/landoui/templates/treestatus/log.html
+++ b/landoui/templates/treestatus/log.html
@@ -32,8 +32,8 @@
                             <div class="block"><h2 class="subtitle">{{ log.who }}</h2></div>
                             <div class="block">
                                 <div class="log-update-visible">
-                                    <p class="log-update-visible">{{ log_update_form.reason.label }}: <b>{{ log.reason }}</b></p>
-                                    <p class="log-update-visible">{{ log_update_form.reason_category.label }}: <b>{{ log_update_form.reason_category.data }}</b></p>
+                                    <p>{{ log_update_form.reason.label }}: <b>{{ log.reason }}</b></p>
+                                    <p>{{ log_update_form.reason_category.label }}: <b>{{ log_update_form.reason_category.data }}</b></p>
                                 </div>
                                 <div class="log-update-hidden">
                                     <div class="field">
