--- a/landoui/templates/treestatus/recent_changes.html
+++ b/landoui/templates/treestatus/recent_changes.html
@@ -15,7 +15,7 @@
 
             <div class="columns">
                 <div class="column">
-                    <p>At {{ status_change_data.when }}, {{ status_change_data.who }} changed trees:</p>
+                    <p>At {{ status_change_data.when }}, <b>{{ status_change_data.who }}</b> changed trees:</p>
                     <div class="block content">
                         <ul>
                             {% for tree in status_change_data.trees %}
