--- a/landoui/templates/treestatus/trees.html
+++ b/landoui/templates/treestatus/trees.html
@@ -22,6 +22,7 @@
     <form action="{{ url_for("treestatus.update_treestatus_form") }}" method="post">
         {{ treestatus_select_trees_form.csrf_token }}
 
+        {% if is_user_authenticated_TODO() %}
         <div class="block">
             <a href="{{ url_for("treestatus.new_tree") }}">
                 <button class="button" title="New Tree" type="button">New Tree</button>
@@ -29,14 +30,17 @@
             <button class="button select-all-trees" type="button">Select all trees</button>
             <button class="button is-primary" title="Update Tree">Update trees</button>
         </div>
+        {% endif %}
         <div class="block">
             {% for tree_option in treestatus_select_trees_form.trees %}
             {% set tree = trees[tree_option.data] %}
                 <div class="box">
                     <div class="columns">
-                        <div class="column is-1">
-                            <input class="tree-select-checkbox" type="checkbox" name="{{ tree_option.id }}" value="{{ tree_option.data }}">
-                        </div>
+                        {% if is_user_authenticated_TODO() %}
+                            <div class="column is-1">
+                                <input class="tree-select-checkbox" type="checkbox" name="{{ tree_option.id }}" value="{{ tree_option.data }}">
+                            </div>
+                        {% endif %}
                         <div class="column is-2">
                             <span class="{{ tree.status | treestatus_to_status_badge_class }}">{{ tree.status }}</span>
                         </div>
